assets/css/style.css
/* ... */
@media (max-width: 42rem) {
	.byline {
		margin-bottom: var(--bx-mgn-sm-2);
	}
}

.byline-avatar {
	height: var(--sz-lilpic);
	width: var(--sz-lilpic);
}

.byline-avatar img {
	border-radius: var(--bx-corner-inner);
	width: 100%;
	height: 100%;
	object-fit: cover;
	object-position: center center;
}

.byline-author {
	width: fit-content;
	white-space: pre;
}

.byline-url {
	font-style: italic;
}

.byline-bio {
	flex: 1 1 0;
	width: auto;
	min-width: 30ch;
}


/**
 * ---------------------------------------
 *   WORK pages, specifically
 * ---------------------------------------
 */

.roles-and-skills {
	border: var(--bdr-width) solid var(--clr-text-subdued);
	padding: var(--gap-unit);
	margin: var(--bx-mgn-md) 0;
	border-radius: var(--bx-corner-inner);
}

.term-roles {
	font-size: var(--fs-500);
}

.term-skills {
	font-size: var(--fs-500);
	padding-top: var(--gap-unit);
}

.roles-and-skills dd {
	margin-left: var(--gap-unit);
}


/**
 * ---------------------------------------
 *   CONTACT page
 * ---------------------------------------
 */

.page-form {
	margin-bottom: var(--bx-mgn-sm-4);
}

fieldset {
	display: flex;
	flex-direction: column;
	border: var(--bdr-width) solid var(--clr-text-subdued);
	border-radius: var(--bx-corner-inner);
	background-color: transparent;
	padding: calc(var(--pg-pad) * 2);
	gap: calc( var(--gap-unit) * 2);
}

/*
	don't want to see labels because placeholder text has the info.
	but screen readers don't always see placeholder text,
	so.. keeping the label available to screen readers but that's it.
	CSS Clipping technique from
	https://webaim.org/techniques/css/invisiblecontent/
*/
label.sr-only {
	clip: rect(1px, 1px, 1px, 1px);
	clip-path: inset(50%);
	height: 1px;
	width: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
}

input, textarea {
	width: 100%;
	padding: var(--bx-pad-md);
	border: var(--bdr-width) solid var(--clr-text-subdued);
	border-radius: var(--bx-corner-tiny);
	color: var(--clr-text);
	background-color: transparent;
	font-size: var(--fs-400);
}

.button {
	border: var(--bdr-width) solid var(--clr-secondary);
	font-weight: var(--fw-regular);
	border-radius: var(--bx-corner-tiny);
	max-width: 8em;
	color: var(--clr-secondary);
	font-size: var(--fs-400);
	padding: 0.75em 1em;
}

.button:hover,
.button:focus {
	background-color: var(--clr-accent-bg);
	color: var(--clr-accent);
}

/* ----------------------------------------
 * last to override other display settings
 * ----------------------------------------
 */

.hiderow {
	display: none;
}

